"Implement BinanceOrderBookApiClient for on-demand order book retrieval and CoinalyzeClient for external macro indicators (OI, funding rate, liquidations). Include unit tests for both clients and add calibration documentation for rejection zones."